--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@667/ngrok-dns",
-  "version": "1.0.3",
+  "name": "ngrok-dns",
+  "version": "1.0.4",
   "description": "DNS plugin for ngrok, update Cloudflare CNAME record",
   "main": "index.js",
   "scripts": {
