--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -50,6 +50,7 @@ jobs:
           node <<EOF
             const fs = require('fs').promises;
             fs.readFile('package.json', 'utf8').then(data => JSON.parse(data)).then(json => {
+              console.log(json);
                 json.name = `@june07/${json.name}`;
                 console.info('Package name changed to %s', json.name);
                 return fs.writeFile('package.json', JSON.stringify(json), 'utf8');
